# stickpoint

./: .gitignore  CMakeLists.txt  README.md  build_installer.bat  installer.iss  package-lock.json
.claude/: settings.local.json
src/: StickPoint.rc  config.h  gamepad.c  gamepad.cpp  gamepad.h  main.c  main.cpp  mouse.c  mouse.cpp  mouse.h  tray.c  tray.cpp  tray.h
